# subtitel-generator

./: .gitignore  README.md  pyproject.toml
example/: English drama for learning English _  Real life English conversation.srt  Example_audio_endlish_small.srt
src/: cli.py  main.py
src/subtitel_generator/: __init__.py  subtitel_generator.py  subtitel_model.py
src/subtitel_generator/file_generator/: __init__.py  base.py  srt_generator.py
src/subtitel_generator/logger/: __init__.py
src/subtitel_generator/speech_to_text/: __init__.py  base.py  vosk_stt_model.py
src/subtitel_generator/text_to_speech/: __init__.py  base.py
src/subtitel_generator/translator/: __init__.py  base.py  deep_translate_google.py
src/subtitel_generator/utils/: __init__.py
src/subtitel_generator/voive_activation_detector/: VADSilero.py  __init__.py  base.py  vad_silero_model.py
tests/: __init__.py  test_full.py  test_vad.py
